Change styling of website group list

--- a/app/app.css
+++ b/app/app.css
@@ -1,4 +1,18 @@
 body {
   padding-top: 50px; }
 
+#groups button {
+  border: 0;
+  border-right: 1px solid lightgray; }
+#groups .badge {
+  color: #fff;
+  background-color: #337AB7; }
+#groups .active {
+  background-color: #fff;
+  border: 1px solid lightgray;
+  border-right: 0;
+  color: #333; }
+#groups .glyphicon-plus {
+  color: #337ab7; }
+
 /*# sourceMappingURL=app.css.map */
