--- a/app/app.scss
+++ b/app/app.scss
@@ -1,3 +1,24 @@
 body {
   padding-top: 50px;
 }
+
+#groups {
+  button {
+    border: 0;
+    border-right: 1px solid lightgray;
+  }
+  .badge {
+    color: #fff;
+    background-color: #337AB7;
+  }
+  .active {
+      background-color: #fff;
+      border: 1px solid lightgray;
+      border-right: 0;
+      color: #333;
+  }
+
+  .glyphicon-plus {
+    color: #337ab7;
+  }
+}
