--- a/app/app.scss
+++ b/app/app.scss
@@ -2,6 +2,12 @@ body {
   padding-top: 50px;
 }
 
+/*
+  =====================================
+  List of groups
+  =====================================
+*/
+
 #groups {
   button {
     border: 0;
@@ -22,6 +28,13 @@ body {
     color: #337ab7;
   }
 }
+
+
+/*
+  =====================================
+  Modals
+  =====================================
+*/
 
 .modal {
   h4 {
